<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_group_identification">

        <EditTextPreference
            android:defaultValue=""
            android:key="@string/preferences_key_username"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/settings_username_title"
            android:summary="@string/settings_username_empty_summary"/>
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/preferences_key_verification_code"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:icon="@drawable/ic_baseline_verified_user_24"
            android:title="@string/settings_verification_code_title"
            android:summary="@string/settings_verification_code_title"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_name">
        <EditTextPreference android:title="Version?"
            android:summary="1.0?"
            android:enabled="false"/>
    </PreferenceCategory>
</PreferenceScreen>